SERVER-76470 Restrict classic $lookup localField 0-prefixed numeric component from acting as array index